Fix footer overlap issue when no recipes or favorites are present

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -46,3 +46,6 @@
   height: auto;
 }
   
+.empty-space {
+  height: 200px;
+}
